# research-output-aggregator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/roagg/: __main__.py  aggregator.py  cli.py  datacite.py  openaire.py  research_output_item.py  ror.py  utils.py
src/roagg/helpers/: utils.py
src/roagg/models/: research_output_item.py
src/roagg/providers/: datacite.py  openaire.py  openalex.py
tests/: test_utils.py
tests/name-lists/: bth.txt  chalmers.txt  gu.txt  hh.txt  hib.txt  kth.txt  lnu.txt  ltu.txt  slu.txt  su.txt
