[project]
name = "roagg"
version = "2025.0.7"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
roagg = "roagg.cli:main"

[project.entry-points."pipx.run"]
roagg = "roagg.cli:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Specify test directory
testpaths = ["tests"]

# Minimum version of pytest
minversion = "6.0"

# Add command line options that are always used
addopts = [
    "-ra",              # Show summary of all test outcomes
    "--strict-markers", # Raise error on unknown markers
    "--strict-config",  # Raise error on invalid config
    "--showlocals",     # Show local variables in tracebacks
]

# Configure test discovery patterns
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Define custom markers (optional, for organizing tests)
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]